// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> should render without blowing up 1`] = `
<div
  className="sc-bdVaJa jqwEfz"
/>
`;

exports[`<Tooltip /> should render without blowing up 2`] = `
<div
  className="sc-bdVaJa cPhBqA"
/>
`;
